--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     # Checkout the code
     - name: Checkout Code
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
 
     # Setup .NET Core
     - name: Setup .NET
