--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,14 +37,24 @@ jobs:
     - name: Run Tests
       run: dotnet test --no-build --verbosity normal
 
+    # Publish the app
+    - name: Publish app
+      run: dotnet publish -c Release -o publish_output
+
     # Saving published files to Artifacts
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v3
       with:
        name: publish_output
        path: publish_output/
+    
+    # Deploying Application to Azure
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+       app-name: ECommercePlatform
+       slot-name: production
+       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+      env:
+        DOTNET_ROOT: /usr/share/dotnet
 
-
-    # Publish the app
-    - name: Publish app
-      run: dotnet publish -c Release -o publish_output
