--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -57,4 +57,8 @@ jobs:
        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
       env:
         DOTNET_ROOT: /usr/share/dotnet
-
+    # Apply Database Migrations
+    - name: Apply Database Migrations
+      run: dotnet ef database update
+      env:
+        ConnectionStrings__DefaultConnection: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
