--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,6 +25,10 @@ jobs:
       with:
         dotnet-version: 9.0.x
     
+    # Install Entity Framework CLI tools
+    - name: Install dotnet-ef
+      run: dotnet tool install --global dotnet-ef
+      
     # Restore dependencies
     - name: Restore dependencies
       run: dotnet restore
@@ -57,8 +61,11 @@ jobs:
        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
       env:
         DOTNET_ROOT: /usr/share/dotnet
-    # Apply Database Migrations
+
+    # Apply database migrations
     - name: Apply Database Migrations
-      run: dotnet ef database update
       env:
-        ConnectionStrings__DefaultConnection: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
+        PATH: ${{ secrets.PATH }}:/home/runner/.dotnet/tools
+      run: dotnet ef database update
+   
+    
