--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,7 +65,7 @@ jobs:
 
     # Apply database migrations
     - name: Apply Database Migrations
-      run: dotnet ef database update --connection "$AZURE_SQL_CONNECTION_STRING"
+      run: dotnet ef database update --connection "AZURE_SQL_CONNECTION_STRING"
       env:
        AZURE_SQL_CONNECTION_STRING: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
 
