--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,6 +67,7 @@ jobs:
     - name: Apply Database Migrations
       run: dotnet ef database update --connection "AZURE_SQL_CONNECTION_STRING"
       env:
+       DOTNET_ROOT: /usr/share/dotnet
        AZURE_SQL_CONNECTION_STRING: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
 
    
