--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,9 +65,8 @@ jobs:
 
     # Apply database migrations
     - name: Apply Database Migrations
-      run: dotnet ef database update --connection "AZURE_SQL_CONNECTION_STRING"
+      run: dotnet ef database update --connection "$AZURE_SQL_CONNECTION_STRING" --project ./ECommercePlatform/ECommercePlatform.csproj
       env:
-       DOTNET_ROOT: /usr/share/dotnet
        AZURE_SQL_CONNECTION_STRING: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
 
    
