--- a/ECommercePlatform/appsettings.json
+++ b/ECommercePlatform/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ECommerceDB;Trusted_Connection=True;TrustServerCertificate=True;",
-    //"DefaultConnection": "Server=tcp:satinderdbserv.database.windows.net,1433;Initial Catalog=ECommerceDB;Persist Security Info=False;User ID=satinder;Password=@dmin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=localhost;Database=ECommerceDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=tcp:satinderdbserv.database.windows.net,1433;Initial Catalog=ECommerceDB;Persist Security Info=False;User ID=satinder;Password=@dmin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Identity": {
     "Password": {
